:lipstick::bug: Fix top line of hero being covered by navbar

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -27,6 +27,11 @@
     background-color: #23272A;
     position: fixed;
     width: 100%;
+    height: 120px;
+}
+
+.Header-content-block {
+  padding-top: 120px;
 }
 
 .Header > * {
